# BlenderExtensionTemplate

./: .gitignore  LICENCE  README.MD  dev_build_task.json  makefile  pyproject.toml  requirements.txt  run_pytest.py
ext_name/: __init__.py  bl_manifest.toml  blender_manifest.toml
ext_name/ext_name/scripts/: clear_wheels_manifest.py  update_wheels_manifest.py
ext_name/ext_name/submod1/: foo.py
ext_name/ext_name/submod1/test/: test_submod1.py
ext_name/scripts/: update_wheels_manifest.py
ext_name/submod1/: __init__.py  foo.py
extension/: __init__.py  blender_manifest.toml
