[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ext_name"
version = "0.0.1"
authors = [
  { name="Orion Sehn", email="OTSehn@pcl.com" },
]
description = "A small example blender extension package"
readme = "README.md"
requires-python = ">=3.11.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/OrionSehn/ext_name"
Issues = "https://github.com/OrionSehn/ext_name/issues"

[tool.setuptools.packages.find]
include = ["ext_name*"]
exclude = ["test*"]